# utilities

todo/: .gitignore  LICENSE  PKGBUILD  README.md  __main__.py  conf.py  main.py  os  path.py  pyproject.toml  requirements.txt  search.py  setup.py  todo.spec  totask-1.0.1-1-any.pkg.tar.zst  viz.py
todo/ToDo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
todo/assets/: print-content.toml
todo/docs/: exit_codes.md  settings.conf  template.csv
todo/files/: todo_list.csv
todo/pkg/totask/: .BUILDINFO  .MTREE  .PKGINFO
todo/src/: todo.py
todo/temp/: todo_shell_script.sh
todo/utils/: viz.py
