[build-system]
requires = ["setuptools>=72.1.0"]

[project]
name = "ToDo"
version = "0.1.0-beta"
description = "Small script for to-do-lists."
authors = [
    { name = "bertrandterrier", email = "i.stemmert@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "tabulate>=0.9.0"
]

[project.scripts]
ToDo = "todo.main:main"